2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* Removed debugging spew.

	* Removed most of the menu bar.

	* capplet-dir-view.c (about_menu_cb): Add Chema, jimmac, and myself
	to authors list.

	* capplet-dir-view-html.c (html_populate, html_write_row): Spacing
	fix.

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (EXTRA_DIST): Added missing Gnome.directory.in.in

	* capplet-dir.c (capplet_control_launch): Don't give an error if
	the property control is NULL

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* forgot to commit the pngs

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir-view-html.c (main_allocate_cb: New function to
	compute optimal number of columns. Try resizing, it's fun!
 
2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view.c (capplet_dir_view_load_dir): Set the window title

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (ccenter_DATA): move Gnome.directory to here

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir.c (capplet_new): Remove annoying debugging output.

	* capplet-dir-view-html.c: Rewritten to use jimmac's new interface.

	* bcg_top.png, title.png, blank.png, active.png: Added.

	* Makefile.am (splash_DATA): Add new pixmap files.

	* gnomecc.glade: Remove ugly toolbar. 

	* capplet-dir-view.[ch]: Remove toolbar-related code.

2001-07-18  Chema Celorio  <chema@celorio.com>

	* capplet-dir.c (get_root_capplet_dir): if the directory is not found, warn
	and exit. Don't coredump
	* main.c (main):

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_cancel_cb):
	(capplet_ok_cb): Explicitly unref the property control

2001-07-13  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Accept window_title
	parameter and use it as the title
	(capplet_activate): Pass entry->name to capplet_control_launch
	(capplet_control_launch): Don't print error and use correct test