@@ -1,5 +1,5 @@
 [Desktop Entry]
-_Name=Control Center
-_Comment=Control Center Menu
+_Name=Main
+_Comment=Main Settings
 Type=Directory
 Icon=
