@@ -1,4 +1,14 @@
 2001-07-19  Richard Hestilow  <hestilow@ximian.com>
+	
+	* Gnome.directory.in.in: Change name to "Main".
+
+	* capplet-dir.c (capplet_new): Return NULL if program
+	is not accessible.
+
+	* capplet-dir-view.c (sidebar_populate): Don't show a directory
+	if it is empty.
+
+2001-07-19  Richard Hestilow  <hestilow@ximian.com>
 
 	* Removed debugging spew.
 
